fix(number-field): add support for scrubbing (#1535)
* feat(number-field): added features required for internal Adobe project
- scrubbable (drag left/right for increment decrementing)
- allow per pixel amount for scrubbing (defaults to using existing step)
- shift modifier step multiplier for fast keyboard increment/decrement

* feat(number-field): add shift modifier to multiply key input

* feat(number-field): put stepper buttons in shift modifier path

* fix(number-field): fix issue with PR where there are runtime errors when buttons are hidden

* fix(number-field): add property to indicate that the user is scrubbing

* fix(number-field): delay scrub input by 250ms in case user clicked/dragged a bit meaning to focus

* fix(number-field): issue with scrubbing off component lights up focus ring without having focus

* fix(number-field): issues with intermittent inner focus-visible and misfiring on negative distance

--- a/packages/number-field/src/number-field.css
+++ b/packages/number-field/src/number-field.css
@@ -34,6 +34,14 @@ sp-field-button {
     visibility: hidden;
 }
 
+:host(:not([focused]):not([disabled])) {
+    cursor: ew-resize;
+}
+
+:host(:not([focused]):not([disabled])) input {
+    cursor: ew-resize;
+}
+
 :host([hide-stepper]:not([quiet])) .input {
     border-radius: var(
         --spectrum-alias-border-radius-regular,
