--- a/packages/menu/src/spectrum-menu-sectionHeading.css
+++ b/packages/menu/src/spectrum-menu-sectionHeading.css
@@ -12,15 +12,30 @@ governing permissions and limitations under the License.
 
 /* THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
 .header {
-    color: var(--spectrum-listheading-text-color);
-    display: block; /* .spectrum-Menu-sectionHeading */
-    font-size: var(--spectrum-listitem-texticon-heading-text-size);
-    font-weight: var(--spectrum-listitem-texticon-heading-text-font-weight);
-    letter-spacing: var(
-        --spectrum-listitem-texticon-heading-letter-spacing
-    ); /* .spectrum-Menu-sectionHeading */
-    line-height: var(--spectrum-listitem-texticon-heading-line-height);
-    margin: var(--spectrum-listitem-texticon-heading-margin);
-    padding: var(--spectrum-listitem-texticon-heading-padding);
-    text-transform: var(--spectrum-listitem-texticon-heading-text-transform);
+    color: var(
+        --highcontrast-menu-section-header-color,
+        var(
+            --mod-menu-section-header-color,
+            var(--spectrum-menu-section-header-color)
+        )
+    );
+    display: block;
+    font-size: var(
+        --mod-menu-section-header-font-size,
+        var(--spectrum-menu-section-header-font-size)
+    );
+    font-weight: var(
+        --mod-menu-section-header-font-weight,
+        var(--spectrum-menu-section-header-font-weight)
+    );
+    grid-area: sectionHeadingArea; /* .spectrum-Menu-sectionHeading */
+    grid-column: 1/-1; /* .spectrum-Menu-sectionHeading */
+    line-height: var(
+        --mod-menu-section-header-line-height,
+        var(--spectrum-menu-section-header-line-height)
+    );
+    min-inline-size: var(
+        --mod-menu-section-header-min-width,
+        var(--spectrum-menu-section-header-min-width)
+    );
 }
