--- a/packages/menu/src/spectrum-chevron.css
+++ b/packages/menu/src/spectrum-chevron.css
@@ -11,28 +11,14 @@ governing permissions and limitations under the License.
 */
 
 /* THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
-:host([dir='ltr']) .chevron {
-    padding-left: var(
-        --spectrum-listitem-texticon-icon-gap
-    ); /* [dir=ltr] .spectrum-Menu-checkmark,
-   * [dir=ltr] 
-.spectrum-Menu-chevron */
-}
-:host([dir='rtl']) .chevron {
-    padding-right: var(
-        --spectrum-listitem-texticon-icon-gap
-    ); /* [dir=rtl] .spectrum-Menu-checkmark,
-   * [dir=rtl] 
-.spectrum-Menu-chevron */
-}
 .chevron {
-    flex-grow: 0; /* .spectrum-Menu-checkmark,
-   * .spectrum-Menu-chevron */
-    margin-top: calc(
-        var(--spectrum-listitem-texticon-ui-icon-margin-top) -
-            var(--spectrum-listitem-texticon-padding-y) + 1px
-    );
+    align-self: center;
+    block-size: var(--spectrum-menu-item-checkmark-height);
+    grid-area: chevronArea; /* .spectrum-Menu-chevron */
+    height: var(--spectrum-menu-item-checkmark-height);
+    inline-size: var(--spectrum-menu-item-checkmark-width);
+    width: var(--spectrum-menu-item-checkmark-width);
 }
 :host([dir='rtl']) .chevron {
-    transform: matrix(-1, 0, 0, 1, 0, 0); /* [dir=rtl] .spectrum-Menu-chevron */
+    transform: rotate(-180deg); /* [dir=rtl] .spectrum-Menu-chevron */
 }
