--- a/packages/menu/src/menu-item.css
+++ b/packages/menu/src/menu-item.css
@@ -64,3 +64,11 @@ governing permissions and limitations under the License.
     padding-left: var(--spectrum-listitem-texticon-icon-gap);
     padding-right: 0;
 }
+
+.checkmark {
+    display: var(--swc-checkmark-display);
+}
+
+:host([selected]) {
+    padding-inline-start: var(--swc-item-padding-inline-start);
+}
