--- a/packages/menu/src/menu-item.css
+++ b/packages/menu/src/menu-item.css
@@ -28,7 +28,7 @@ governing permissions and limitations under the License.
     inset: 0;
 }
 
-:host([dir='ltr']) [icon-only]::slotted(:last-of-type) {
+/* :host([dir='ltr']) [icon-only]::slotted(:last-of-type) {
     margin-right: auto;
 }
 
@@ -37,33 +37,25 @@ governing permissions and limitations under the License.
 }
 
 :host([dir='ltr']) ::slotted([slot='icon']) {
-    /* [dir=ltr] .spectrum-Menu-item .spectrum-Icon+.spectrum-Menu-itemLabel,
-   * [dir=ltr] .spectrum-Menu-item .spectrum-Menu-itemIcon+.spectrum-Menu-itemLabel */
     margin-right: var(--spectrum-listitem-texticon-icon-gap);
 }
 
 :host([dir='rtl']) ::slotted([slot='icon']) {
-    /* [dir=rtl] .spectrum-Menu-item .spectrum-Icon+.spectrum-Menu-itemLabel,
-   * [dir=rtl] .spectrum-Menu-item .spectrum-Menu-itemIcon+.spectrum-Menu-itemLabel */
     margin-left: var(--spectrum-listitem-texticon-icon-gap);
 }
 
 :host([dir='rtl']) slot[name='icon'] + #label {
-    /* [dir=rtl] .spectrum-Menu-item .spectrum-Icon+.spectrum-Menu-itemLabel,
-   * [dir=rtl] .spectrum-Menu-item .spectrum-Menu-itemIcon+.spectrum-Menu-itemLabel */
     margin-right: 0;
 }
 
 :host([dir='ltr']) slot[name='icon'] + #label {
-    /* [dir=ltr] .spectrum-Menu-item .spectrum-Icon+.spectrum-Menu-itemLabel,
-   * [dir=ltr] .spectrum-Menu-item .spectrum-Menu-itemIcon+.spectrum-Menu-itemLabel */
     margin-left: 0;
 }
 
 :host([dir='rtl']) .chevron {
     padding-left: var(--spectrum-listitem-texticon-icon-gap);
     padding-right: 0;
-}
+} */
 
 .checkmark {
     display: var(--swc-checkmark-display);
