feat(popover): use core tokens

--- a/tools/styles/tokens/express/global-vars.css
+++ b/tools/styles/tokens/express/global-vars.css
@@ -390,3 +390,8 @@ governing permissions and limitations under the License.
         -1px * var(--spectrum-spacing-50)
     );
 }
+
+:host,
+:root {
+    --system-spectrum-popover-border-width: 0;
+}
