--- a/tools/styles/tokens/spectrum/global-vars.css
+++ b/tools/styles/tokens/spectrum/global-vars.css
@@ -400,3 +400,8 @@ governing permissions and limitations under the License.
     --system-spectrum-actiongroup-horizontal-spacing-compact: -1px;
     --system-spectrum-actiongroup-vertical-spacing-compact: -1px;
 }
+
+:host,
+:root {
+    --system-spectrum-popover-border-width: var(--spectrum-border-width-100);
+}
