--- a/tools/styles/tokens/express/global-vars.css
+++ b/tools/styles/tokens/express/global-vars.css
@@ -1283,3 +1283,38 @@ governing permissions and limitations under the License.
     --system-spectrum-picker-border-color-active: transparent;
     --system-spectrum-picker-border-color-key-focus: transparent;
 }
+:host,
+:root {
+    --system-spectrum-slider-margin-top-offset: -6px;
+    --system-spectrum-slider-track-color: var(--spectrum-gray-200);
+    --system-spectrum-slider-track-fill-color: var(--spectrum-gray-600);
+    --system-spectrum-slider-ramp-track-color: var(--spectrum-gray-300);
+    --system-spectrum-slider-ramp-track-color-disabled: var(
+        --spectrum-gray-200
+    );
+    --system-spectrum-slider-handle-background-color: var(--spectrum-gray-50);
+    --system-spectrum-slider-handle-background-color-disabled: var(
+        --spectrum-gray-50
+    );
+    --system-spectrum-slider-ramp-handle-background-color: var(
+        --spectrum-gray-50
+    );
+    --system-spectrum-slider-ticks-handle-background-color: var(
+        --spectrum-gray-50
+    );
+    --system-spectrum-slider-handle-border-color: var(--spectrum-gray-800);
+    --system-spectrum-slider-handle-disabled-background-color: var(
+        --spectrum-gray-50
+    );
+    --system-spectrum-slider-tick-mark-color: var(--spectrum-gray-200);
+    --system-spectrum-slider-handle-border-color-hover: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-slider-handle-border-color-down: var(--spectrum-gray-900);
+    --system-spectrum-slider-handle-border-color-key-focus: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-slider-handle-focus-ring-color-key-focus: var(
+        --spectrum-focus-indicator-color
+    );
+}
