chore(textfield,number-field): use core tokens

--- a/tools/styles/tokens/express/global-vars.css
+++ b/tools/styles/tokens/express/global-vars.css
@@ -1283,3 +1283,44 @@ governing permissions and limitations under the License.
     --system-spectrum-picker-border-color-active: transparent;
     --system-spectrum-picker-border-color-key-focus: transparent;
 }
+:host,
+:root {
+    --system-spectrum-stepper-border-width: var(--spectrum-border-width-200);
+    --system-spectrum-stepper-button-middle-border-width: 0;
+    --system-spectrum-stepper-button-gap: var(--spectrum-border-width-200);
+    --system-spectrum-stepper-border-size-reset: 0;
+    --system-spectrum-stepper-border-color: var(--spectrum-gray-400);
+    --system-spectrum-stepper-border-color-hover: var(--spectrum-gray-500);
+    --system-spectrum-stepper-border-color-focus: var(--spectrum-gray-800);
+    --system-spectrum-stepper-border-color-focus-hover: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-stepper-border-color-keyboard-focus: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-stepper-button-background-color-default: var(
+        --spectrum-gray-200
+    );
+    --system-spectrum-stepper-button-background-color-hover: var(
+        --spectrum-gray-300
+    );
+    --system-spectrum-stepper-button-background-color-focus: var(
+        --spectrum-gray-400
+    );
+    --system-spectrum-stepper-button-background-color-keyboard-focus: var(
+        --spectrum-gray-300
+    );
+}
+:host,
+:root {
+    --system-spectrum-textfield-border-color: var(--spectrum-gray-400);
+    --system-spectrum-textfield-border-color-hover: var(--spectrum-gray-500);
+    --system-spectrum-textfield-border-color-focus: var(--spectrum-gray-800);
+    --system-spectrum-textfield-border-color-focus-hover: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-textfield-border-color-keyboard-focus: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-textfield-border-width: var(--spectrum-border-width-200);
+}
