--- a/tools/styles/tokens/spectrum/global-vars.css
+++ b/tools/styles/tokens/spectrum/global-vars.css
@@ -1293,3 +1293,48 @@ governing permissions and limitations under the License.
     --system-spectrum-picker-border-color-active: var(--spectrum-gray-600);
     --system-spectrum-picker-border-color-key-focus: var(--spectrum-gray-500);
 }
+:host,
+:root {
+    --system-spectrum-stepper-border-width: var(--spectrum-border-width-100);
+    --system-spectrum-stepper-button-middle-border-width: var(
+        --spectrum-border-width-100
+    );
+    --system-spectrum-stepper-button-gap: 0px;
+    --system-spectrum-stepper-border-size-reset: var(
+        --spectrum-border-width-100
+    );
+    --system-spectrum-stepper-border-color: var(--spectrum-gray-500);
+    --system-spectrum-stepper-border-color-hover: var(--spectrum-gray-600);
+    --system-spectrum-stepper-border-color-focus: var(--spectrum-gray-800);
+    --system-spectrum-stepper-border-color-focus-hover: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-stepper-border-color-keyboard-focus: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-stepper-button-background-color-default: var(
+        --spectrum-gray-75
+    );
+    --system-spectrum-stepper-button-background-color-hover: var(
+        --spectrum-gray-200
+    );
+    --system-spectrum-stepper-button-background-color-focus: var(
+        --spectrum-gray-300
+    );
+    --system-spectrum-stepper-button-background-color-keyboard-focus: var(
+        --spectrum-gray-200
+    );
+}
+:host,
+:root {
+    --system-spectrum-textfield-border-color: var(--spectrum-gray-500);
+    --system-spectrum-textfield-border-color-hover: var(--spectrum-gray-600);
+    --system-spectrum-textfield-border-color-focus: var(--spectrum-gray-800);
+    --system-spectrum-textfield-border-color-focus-hover: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-textfield-border-color-keyboard-focus: var(
+        --spectrum-gray-900
+    );
+    --system-spectrum-textfield-border-width: var(--spectrum-border-width-100);
+}
