--- a/packages/menu/src/menu-item.css
+++ b/packages/menu/src/menu-item.css
@@ -76,3 +76,13 @@ governing permissions and limitations under the License.
     padding-left: var(--spectrum-listitem-texticon-icon-gap);
     padding-right: 0;
 }
+
+.checkmark {
+    color: var(
+        --highcontrast-menu-checkmark-icon-color-default,
+        var(
+            --mod-menu-checkmark-icon-color-default,
+            var(--spectrum-menu-checkmark-icon-color-default)
+        )
+    );
+}
