--- a/packages/menu/src/spectrum-checkmark.css
+++ b/packages/menu/src/spectrum-checkmark.css
@@ -12,30 +12,38 @@ governing permissions and limitations under the License.
 
 /* THIS FILE IS MACHINE GENERATED. DO NOT EDIT */
 .checkmark {
-    align-self: flex-start;
-    display: none;
-    opacity: 1; /* .spectrum-Menu-checkmark */
-    transform: scale(1); /* .spectrum-Menu-checkmark */
-}
-:host([dir='ltr']) .checkmark {
-    padding-left: var(
-        --spectrum-listitem-texticon-icon-gap
-    ); /* [dir=ltr] .spectrum-Menu-checkmark,
-   * [dir=ltr] 
-.spectrum-Menu-chevron */
-}
-:host([dir='rtl']) .checkmark {
-    padding-right: var(
-        --spectrum-listitem-texticon-icon-gap
-    ); /* [dir=rtl] .spectrum-Menu-checkmark,
-   * [dir=rtl] 
-.spectrum-Menu-chevron */
-}
-.checkmark {
-    flex-grow: 0; /* .spectrum-Menu-checkmark,
-   * .spectrum-Menu-chevron */
-    margin-top: calc(
-        var(--spectrum-listitem-texticon-ui-icon-margin-top) -
-            var(--spectrum-listitem-texticon-padding-y) + 1px
+    fill: var(
+        --highcontrast-menu-checkmark-icon-color-default,
+        var(
+            --mod-menu-checkmark-icon-color-default,
+            var(--spectrum-menu-checkmark-icon-color-default)
+        )
     );
+    align-self: center; /* .spectrum-Menu-checkmark */
+    block-size: var(
+        --mod-menu-item-checkmark-height,
+        var(--spectrum-menu-item-checkmark-height)
+    );
+    display: var(
+        --mod-menu-checkmark-display,
+        var(--spectrum-menu-checkmark-display)
+    );
+    grid-area: checkmarkArea; /* .spectrum-Menu-checkmark */
+    inline-size: var(
+        --mod-menu-item-checkmark-width,
+        var(--spectrum-menu-item-checkmark-width)
+    );
+    opacity: 1; /* .spectrum-Menu-checkmark */
+}
+.checkmark--withAdjacentText {
+    margin-inline-end: var(
+        --mod-menu-item-label-text-to-visual,
+        var(--spectrum-menu-item-label-text-to-visual)
+    ); /* .spectrum-Menu-checkmark--withAdjacentText */
+}
+.spectrum-Menu-checkmark--withAdjacentIcon {
+    margin-inline-end: var(
+        --mod-menu-item-text-to-control,
+        var(--spectrum-menu-item-text-to-control)
+    ); /* .spectrum-Menu-checkmark--withAdjacentIcon */
 }
