docs: build with Declarative Shadow DOM

--- a/projects/documentation/src/components/layout.css
+++ b/projects/documentation/src/components/layout.css
@@ -23,6 +23,7 @@ governing permissions and limitations under the License.
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
+    background-color: var(--spectrum-global-color-gray-50);
 }
 
 docs-side-nav:not(:defined) {
@@ -64,13 +65,21 @@ docs-side-nav:not(:defined) {
         );
     flex: 1 1 auto;
     color: var(--spectrum-global-color-gray-800);
-    background-color: var(--spectrum-global-color-gray-50);
 }
 
 @media screen and (max-width: 960px) {
     #body {
         height: 50%;
         grid-template-columns: 100%;
+    }
+
+    #page .manage-theme {
+        display: none;
+    }
+
+    :host(:not(:defined)) #body {
+        margin-top: var(--spectrum-global-dimension-size-600);
+        border-top: 1px solid var(--spectrum-global-color-gray-200);
     }
 }
 
