--- a/packages/textfield/src/spectrum-textfield.css
+++ b/packages/textfield/src/spectrum-textfield.css
@@ -408,6 +408,8 @@ governing permissions and limitations under the License.
         --highcontrast-textfield-text-color-disabled: GrayText;
         --highcontrast-textfield-text-color-readonly: CanvasText;
     }
+    #textfield:focus-within:after,
+    #textfield:focus:after,
     :host([focused]) #textfield:after {
         forced-color-adjust: none;
     }
@@ -459,13 +461,261 @@ governing permissions and limitations under the License.
     );
     pointer-events: none;
     position: absolute;
-    transition: box-shadow var(--spectrum-global-animation-duration-100, 0.13s)
-            ease-in-out,
-        border-color var(--spectrum-global-animation-duration-100, 0.13s)
-            ease-in-out;
+    right: 0;
+    top: 0;
+}
+#textfield:focus-within:after,
+:host([focused]) #textfield:after {
+    border-color: var(
+        --highcontrast-textfield-focus-indicator-color,
+        var(
+            --mod-textfield-focus-indicator-color,
+            var(--spectrum-textfield-focus-indicator-color)
+        )
+    ); /* .spectrum-Textfield.is-keyboardFocused:after,
+   * .spectrum-Textfield:focus-within::after */
+    border-width: var(
+        --mod-textfield-focus-indicator-width,
+        var(--spectrum-textfield-focus-indicator-width)
+    );
+}
+:host([readonly]) .spectrum-Textfield:after {
+    border: 0; /* .is-readOnly .spectrum-Textfield:after */
 }
 :host([quiet]) #textfield:after {
     border-radius: 0;
+    inline-size: 100%; /* .spectrum-Textfield--quiet:after */
+    margin-block-start: 0;
+    margin-inline-start: 0;
+}
+:host([quiet][focused]) #textfield:after {
+    border-width: 0 0
+        var(
+            --mod-textfield-focus-indicator-width,
+            var(--spectrum-textfield-focus-indicator-width)
+        )
+        0; /* .spectrum-Textfield--quiet.is-keyboardFocused:after */
+}
+.icon-workflow {
+    bottom: 0;
+    color: var(
+        --highcontrast-textfield-text-color-default,
+        var(
+            --mod-textfield-text-color-default,
+            var(--spectrum-textfield-text-color-default)
+        )
+    );
+    display: block; /* .spectrum-Textfield .spectrum-Textfield-icon */
+    margin-block: auto;
+    position: absolute;
+    top: 0;
+}
+.icon-workflow.spectrum-Search-icon {
+    right: auto; /* .spectrum-Textfield .spectrum-Textfield-icon.spectrum-Search-icon */
+}
+:host([disabled]) #textfield .spectrum-Textfield .icon-workflow {
+    color: var(
+        --highcontrast-textfield-text-color-disabled,
+        var(
+            --mod-textfield-text-color-disabled,
+            var(--spectrum-textfield-text-color-disabled)
+        )
+    ); /* .spectrum-Textfield.is-disabled .spectrum-Textfield .spectrum-Textfield-icon */
+}
+:host([quiet]) .spectrum-Textfield .icon-workflow {
+    color: var(
+        --highcontrast-textfield-text-color-default,
+        var(
+            --mod-textfield-text-color-default,
+            var(--spectrum-textfield-text-color-default)
+        )
+    ); /* .spectrum-Textfield--quiet .spectrum-Textfield .spectrum-Textfield-icon */
+}
+:host([quiet][disabled]) #textfield .spectrum-Textfield .icon-workflow {
+    color: var(
+        --highcontrast-textfield-text-color-disabled,
+        var(
+            --mod-textfield-text-color-disabled,
+            var(--spectrum-textfield-text-color-disabled)
+        )
+    ); /* .spectrum-Textfield--quiet.is-disabled .spectrum-Textfield .spectrum-Textfield-icon */
+}
+:host([readonly]) #textfield .spectrum-Textfield .icon-workflow {
+    color: var(
+        --highcontrast-textfield-text-color-readonly,
+        var(
+            --mod-textfield-text-color-readonly,
+            var(--spectrum-textfield-text-color-readonly)
+        )
+    ); /* .spectrum-Textfield.is-readOnly .spectrum-Textfield .spectrum-Textfield-icon */
+}
+:host([invalid]) #textfield .icon,
+:host([valid]) #textfield .icon {
+    grid-column: 2;
+    grid-row: 2;
+    margin-inline-start: auto;
+    pointer-events: all;
+    position: absolute; /* .spectrum-Textfield.is-valid .spectrum-Textfield-validationIcon,
+   * .spectrum-Textfield.is-invalid .spectrum-Textfield-validationIcon */
+    top: 0;
+}
+:host([valid]) #textfield .icon {
+    color: var(
+        --highcontrast-textfield-icon-color-valid,
+        var(
+            --mod-textfield-icon-color-valid,
+            var(--spectrum-textfield-icon-color-valid)
+        )
+    );
+    inset-block-end: var(
+        --mod-textfield-icon-spacing-block-valid,
+        var(--spectrum-textfield-icon-spacing-block-valid)
+    );
+    inset-block-start: var(
+        --mod-textfield-icon-spacing-block-valid,
+        var(--spectrum-textfield-icon-spacing-block-valid)
+    ); /* .spectrum-Textfield.is-valid .spectrum-Textfield-validationIcon */
+    inset-inline-end: var(
+        --mod-textfield-icon-spacing-inline-end-valid,
+        var(--spectrum-textfield-icon-spacing-inline-end-valid)
+    );
+    inset-inline-start: var(
+        --mod-textfield-icon-spacing-inline-start-valid,
+        var(--spectrum-textfield-icon-spacing-inline-start-valid)
+    );
+}
+:host([invalid]) #textfield .icon {
+    block-size: var(
+        --mod-textfield-icon-size-invalid,
+        var(--spectrum-textfield-icon-size-invalid)
+    ); /* .spectrum-Textfield.is-invalid .spectrum-Textfield-validationIcon */
+    color: var(
+        --highcontrast-textfield-icon-color-invalid,
+        var(
+            --mod-textfield-icon-color-invalid,
+            var(--spectrum-textfield-icon-color-invalid)
+        )
+    );
+    inline-size: var(
+        --mod-textfield-icon-size-invalid,
+        var(--spectrum-textfield-icon-size-invalid)
+    );
+    inset-block-end: var(
+        --mod-textfield-icon-spacing-block-invalid,
+        var(--spectrum-textfield-icon-spacing-block-invalid)
+    );
+    inset-block-start: var(
+        --mod-textfield-icon-spacing-block-invalid,
+        var(--spectrum-textfield-icon-spacing-block-invalid)
+    );
+    inset-inline-end: var(
+        --mod-textfield-icon-spacing-inline-end-invalid,
+        var(--spectrum-textfield-icon-spacing-inline-end-invalid)
+    );
+    inset-inline-start: var(
+        --mod-textfield-icon-spacing-inline-start-invalid,
+        var(--spectrum-textfield-icon-spacing-inline-start-invalid)
+    );
+}
+:host([disabled]) #textfield .icon,
+:host([readonly]) #textfield .icon {
+    color: transparent; /* .spectrum-Textfield.is-disabled .spectrum-Textfield-validationIcon,
+   * .spectrum-Textfield.is-readOnly .spectrum-Textfield-validationIcon */
+}
+:host([quiet]) .icon {
+    padding-inline-end: 0; /* .spectrum-Textfield--quiet .spectrum-Textfield-validationIcon */
+}
+:host([quiet][valid]) #textfield .icon {
+    inset-inline-end: var(
+        --mod-textfield-icon-spacing-inline-end-quiet-valid,
+        var(--spectrum-textfield-icon-spacing-inline-end-quiet-valid)
+    ); /* .spectrum-Textfield--quiet.is-valid .spectrum-Textfield-validationIcon */
+}
+:host([quiet][invalid]) #textfield .icon {
+    inset-inline-end: var(
+        --mod-textfield-icon-spacing-inline-end-quiet-invalid,
+        var(--spectrum-textfield-icon-spacing-inline-end-quiet-invalid)
+    ); /* .spectrum-Textfield--quiet.is-invalid .spectrum-Textfield-validationIcon */
+}
+.spectrum-FieldLabel {
+    grid-column: 1 / span 1;
+    grid-row: 1;
+    margin-block-end: var(
+        --mod-textfield-label-spacing-block,
+        var(--spectrum-textfield-label-spacing-block)
+    ); /* .spectrum-Textfield .spectrum-FieldLabel */
+    padding-left: calc(
+        var(
+                --mod-textfield-corner-radius,
+                var(--spectrum-textfield-corner-radius)
+            ) / 2
+    );
+}
+:host([quiet]) .spectrum-FieldLabel {
+    margin-block-end: var(
+        --mod-textfield-label-spacing-block-quiet,
+        var(--spectrum-textfield-label-spacing-block-quiet)
+    ); /* .spectrum-Textfield--quiet .spectrum-FieldLabel */
+}
+:host([disabled]) .spectrum-FieldLabel {
+    color: var(
+        --spectrum-textfield-text-color-disabled
+    ); /* .is-disabled .spectrum-FieldLabel */
+}
+.spectrum-HelpText {
+    grid-column: 1 / span 2;
+    grid-row: 3;
+    margin-block-start: var(
+        --mod-textfield-helptext-spacing-block,
+        var(--spectrum-textfield-helptext-spacing-block)
+    ); /* .spectrum-Textfield .spectrum-HelpText */
+    padding-left: calc(
+        var(
+                --mod-textfield-corner-radius,
+                var(--spectrum-textfield-corner-radius)
+            ) / 2
+    );
+}
+.spectrum-Textfield-characterCount {
+    align-items: flex-end;
+    display: inline-flex; /* .spectrum-Textfield-characterCount */
+    font-family: var(
+        --mod-textfield-character-count-font-family,
+        var(--spectrum-textfield-character-count-font-family)
+    );
+    font-size: var(
+        --mod-textfield-character-count-font-size,
+        var(--spectrum-textfield-character-count-font-size)
+    );
+    font-weight: var(
+        --mod-textfield-character-count-font-weight,
+        var(--spectrum-textfield-character-count-font-weight)
+    );
+    grid-column: 2 / span 1;
+    grid-row: 1;
+    justify-content: flex-end;
+    margin-block-end: var(
+        --mod-textfield-character-count-spacing-block,
+        var(--spectrum-textfield-character-count-spacing-block)
+    );
+    margin-inline-end: 0;
+    margin-inline-start: var(
+        --mod-textfield-character-count-spacing-inline,
+        var(--spectrum-textfield-character-count-spacing-inline)
+    );
+    padding-right: calc(
+        var(
+                --mod-textfield-corner-radius,
+                var(--spectrum-textfield-corner-radius)
+            ) / 2
+    );
+    width: auto;
+}
+:host([quiet]) .spectrum-Textfield-characterCount {
+    margin-block-end: var(
+        --mod-textfield-character-count-spacing-block-quiet,
+        var(--spectrum-textfield-character-count-spacing-block-quiet)
+    ); /* .spectrum-Textfield--quiet .spectrum-Textfield-characterCount */
 }
 .input {
     -webkit-appearance: none;
@@ -1068,11 +1318,29 @@ governing permissions and limitations under the License.
    * .spectrum-Textfield.is-readOnly:hover .spectrum-Textfield-input::placeholder,
    * .spectrum-Textfield-input:read-only::placeholder */
 }
-:host([focused][quiet]) .input,
-:host([quiet]) .input:focus-visible {
-    border-color: var(
-        --spectrum-textfield-m-texticon-border-color-key-focus,
-        var(--spectrum-alias-input-border-color-key-focus)
+.spectrum-Textfield--sideLabel {
+    grid-template-columns: auto auto auto; /* .spectrum-Textfield--sideLabel */
+    grid-template-rows: auto auto;
+}
+.spectrum-Textfield--sideLabel:after {
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1; /* .spectrum-Textfield--sideLabel:after */
+}
+.spectrum-Textfield--sideLabel .spectrum-FieldLabel {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 2;
+    margin-inline-end: var(
+        --mod-textfield-label-spacing-inline-side-label,
+        var(--spectrum-textfield-label-spacing-inline-side-label)
+    ); /* .spectrum-Textfield--sideLabel .spectrum-FieldLabel */
+}
+.spectrum-Textfield--sideLabel .spectrum-Textfield-characterCount {
+    align-items: flex-start; /* .spectrum-Textfield--sideLabel .spectrum-Textfield-characterCount */
+    grid-column: 3 / span 1;
+    grid-row: 1;
+    margin-block-start: var(
+        --mod-textfield-character-count-spacing-block-side,
+        var(--spectrum-textfield-character-count-spacing-block-side)
     );
     box-shadow: 0 1px 0
         var(
@@ -1086,11 +1354,58 @@ governing permissions and limitations under the License.
         var(--spectrum-alias-input-border-color-invalid-default)
     );
 }
-:host([focused][invalid][quiet]) .input,
-:host([invalid][quiet]) .input:focus {
-    border-color: var(
-        --spectrum-textfield-m-quiet-texticon-border-color-invalid-mouse-focus,
-        var(--spectrum-alias-input-border-color-invalid-mouse-focus)
+.spectrum-Textfield--sideLabel .spectrum-HelpText {
+    grid-column: 2 / span 1;
+    grid-row: 2; /* .spectrum-Textfield--sideLabel .spectrum-HelpText */
+}
+.spectrum-Textfield--sideLabel .icon {
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1; /* .spectrum-Textfield--sideLabel .spectrum-Textfield-validationIcon */
+}
+.spectrum-Textfield--sideLabel .input {
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1; /* .spectrum-Textfield--sideLabel .spectrum-Textfield-input */
+}
+:host([multiline]) .input {
+    min-block-size: var(
+        --mod-text-area-min-block-size,
+        var(--spectrum-text-area-min-block-size)
+    );
+    min-inline-size: var(
+        --mod-text-area-min-inline-size,
+        var(--spectrum-text-area-min-inline-size)
+    ); /* .spectrum-Textfield--multiline .spectrum-Textfield-input */
+    resize: inherit;
+}
+:host([multiline]) #textfield.spectrum-Textfield--grows {
+    grid-row: 1 / auto; /* .spectrum-Textfield--multiline.spectrum-Textfield--grows */
+}
+:host([multiline][quiet]) #textfield .input {
+    min-block-size: var(
+        --mod-text-area-min-block-size-quiet,
+        var(--spectrum-text-area-min-block-size-quiet)
+    ); /* .spectrum-Textfield--multiline.spectrum-Textfield--quiet .spectrum-Textfield-input */
+    overflow-y: hidden;
+    resize: none;
+}
+:host {
+    --spectrum-textfield-border-color: var(
+        --system-spectrum-textfield-border-color
+    ); /* .spectrum-Textfield */
+    --spectrum-textfield-border-color-hover: var(
+        --system-spectrum-textfield-border-color-hover
+    );
+    --spectrum-textfield-border-color-focus: var(
+        --system-spectrum-textfield-border-color-focus
+    );
+    --spectrum-textfield-border-color-focus-hover: var(
+        --system-spectrum-textfield-border-color-focus-hover
+    );
+    --spectrum-textfield-border-color-keyboard-focus: var(
+        --system-spectrum-textfield-border-color-keyboard-focus
+    );
+    --spectrum-textfield-border-width: var(
+        --system-spectrum-textfield-border-width
     );
 }
 :host([focused][invalid][quiet]) .input,
