--- a/tools/styles/tokens/express/global-vars.css
+++ b/tools/styles/tokens/express/global-vars.css
@@ -1286,9 +1286,14 @@ governing permissions and limitations under the License.
 :host,
 :root {
     --system-spectrum-stepper-border-width: var(--spectrum-border-width-200);
-    --system-spectrum-stepper-button-middle-border-width: 0;
-    --system-spectrum-stepper-button-gap: var(--spectrum-border-width-200);
     --system-spectrum-stepper-border-size-reset: 0;
+    --system-spectrum-stepper-button-middle-border-width: 0;
+    --system-spectrum-stepper-button-gap-reset: var(
+        --spectrum-border-width-200
+    );
+    --system-spectrum-stepper-button-border-radius-reset: calc(
+        var(--spectrum-corner-radius-100) - var(--spectrum-border-width-200) * 2
+    );
     --system-spectrum-stepper-border-color: var(--spectrum-gray-400);
     --system-spectrum-stepper-border-color-hover: var(--spectrum-gray-500);
     --system-spectrum-stepper-border-color-focus: var(--spectrum-gray-800);
