refactor(color-wheel): bring back code review updates

--- a/packages/color-wheel/src/color-wheel.css
+++ b/packages/color-wheel/src/color-wheel.css
@@ -14,6 +14,15 @@ governing permissions and limitations under the License.
 
 :host {
     touch-action: none;
+
+    --track-width: var(
+        --mod-colorwheel-track-width,
+        var(--spectrum-colorwheel-track-width)
+    );
+    --border-width: var(
+        --mod-colorwheel-border-width,
+        var(--spectrum-colorwheel-border-width)
+    );
 }
 
 :host(:focus) {
