--- a/packages/textfield/src/textfield.css
+++ b/packages/textfield/src/textfield.css
@@ -142,3 +142,15 @@ textarea {
         var(--spectrum-alias-input-border-color-quiet-disabled)
     );
 }
+
+/* :not selector not working with regex for process-spectrum so had to override here */
+:host([disabled]) #textfield .icon.icon-search,
+:host([readonly]) #textfield .icon.icon-search {
+    color: var(
+        --highcontrast-textfield-text-color-disabled,
+        var(
+            --mod-textfield-text-color-disabled,
+            var(--spectrum-textfield-text-color-disabled)
+        )
+    );
+}
